[package]
name = "day-eleven"
version = "0.1.0"
authors = ["Eric Rinkus <ejrinkus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode = { path = "../intcode" }
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
